--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "metalsmith",
     "metalsmith-plugin"
   ],
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
+  },
   "author": "Maxime Thirouin",
   "license": "MIT",
   "repository": {
@@ -25,12 +32,16 @@
   "dependencies": {
     "async": "^0.9.0",
     "multimatch": "^2.0.0",
-    "react": "^0.13.2"
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
   },
   "devDependencies": {
     "babel": "^5.1.13",
     "babel-eslint": "^3.0.1",
-    "babel-tape-runner": "^1.1.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-tape-runner": "^2.0.0",
     "eslint": "^0.20.0",
     "eslint-plugin-react": "^2.2.0",
     "metalsmith": "^1.7.0",
