--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "main": "dist/index.js",
   "dependencies": {
     "async": "^0.9.0",
+    "babel": "^6.3.26",
     "multimatch": "^2.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   },
   "devDependencies": {
-    "babel": "^5.1.13",
+    "babel-cli": "^6.4.0",
     "babel-eslint": "^3.0.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
